--- a/Tests/Core/ApplicationServiceUnitTest/ApplicationServiceUnitTest.csproj
+++ b/Tests/Core/ApplicationServiceUnitTest/ApplicationServiceUnitTest.csproj
@@ -11,9 +11,15 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.1" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\ApplicationService\ApplicationService.csproj" />
   </ItemGroup>
 
   <ItemGroup>
