--- a/Core/ApplicationService/ApplicationService.csproj
+++ b/Core/ApplicationService/ApplicationService.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Query\GetAllProduct\" />
+  </ItemGroup>
+
 </Project>
